[package]
name = "ners"
version = "0.1.0"
authors = ["descawed <github@descawed.com>"]
edition = "2021"
description = "An NES emulator learning project"

[dependencies]
anyhow = "1.0.95"
binrw = "0.14.1"
eframe = { version = "0.30.0", features = ["android-game-activity"] }
egui = { version = "0.30.0", features = ["log", "persistence"] }
log = "0.4.22"
modular-bitfield = "0.11.2"
num-derive = "0.4.2"
num-traits = "0.2.19"
rfd = "0.15.1"
simplelog = "0.12.2"
spin_sleep = "1.3.0"
tokio = { version = "1.42.0", features = ["rt", "rt-multi-thread"] }
wasm-bindgen-futures = "0.4.49"
web-sys = "0.3.76"
